--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .DS_Store
+.idea/
+.vscode/
 node_modules
 /build
-/.svelte-kit
+.svelte-kit/
 /package
 .env
 .env.*
@@ -10,3 +12,4 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 projects.js
 blogs.js
+projects.json
